Export functions that do have uses outside run_numbat.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,11 @@ export(plot_phylo_heatmap)
 export(plot_psbulk)
 export(plot_sc_tree)
 export(run_numbat)
+export(get_segs_consensus)
+export(run_group_hmms)
+export(make_group_bulks)
+export(exp_hclust)
+export(retest_bulks)
 import(Matrix)
 import(Rcpp)
 import(dplyr)
