Export read_file to allow usage outside (i.e. for loading gexp_roll_wide file).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(run_group_hmms)
 export(make_group_bulks)
 export(exp_hclust)
 export(retest_bulks)
+export(read_file)
 import(Matrix)
 import(Rcpp)
 import(dplyr)
